[gd_scene load_steps=14 format=3 uid="uid://bv4engl26kj82"]

[ext_resource type="Script" uid="uid://b8eu8xvtilanj" path="res://scripts/ui/quest_checklist.gd" id="1_ss3m1"]
[ext_resource type="Script" uid="uid://dd674gtune7s5" path="res://scripts/resource/quest_resource.gd" id="2_wtq8e"]
[ext_resource type="Script" uid="uid://scy0e6iognox" path="res://scripts/quest_requirement.gd" id="3_lb0fv"]
[ext_resource type="PackedScene" uid="uid://b8mf3yganqkp3" path="res://scenes/ui/quest_info.tscn" id="5_knh3f"]
[ext_resource type="Script" uid="uid://bf4wivdq2snpl" path="res://scenes/ui/animated_button.gd" id="5_xi4mx"]

[sub_resource type="Resource" id="Resource_knh3f"]
script = ExtResource("3_lb0fv")
associated_building_name = &"Collector"
amount = 1
metadata/_custom_type_script = "uid://scy0e6iognox"

[sub_resource type="Resource" id="Resource_lb0fv"]
script = ExtResource("2_wtq8e")
description = "Place collector near source"
requirements_array = Array[ExtResource("3_lb0fv")]([SubResource("Resource_knh3f")])
is_tutorial = true
metadata/_custom_type_script = "uid://dd674gtune7s5"

[sub_resource type="Resource" id="Resource_xi4mx"]
script = ExtResource("3_lb0fv")
quest_signal = 2
associated_note_name = &"C"
amount = 10
metadata/_custom_type_script = "uid://scy0e6iognox"

[sub_resource type="Resource" id="Resource_7qd3y"]
script = ExtResource("2_wtq8e")
description = "Transmit to the station! (10 x C)"
requirements_array = Array[ExtResource("3_lb0fv")]([SubResource("Resource_xi4mx")])
is_tutorial = true
metadata/_custom_type_script = "uid://dd674gtune7s5"

[sub_resource type="Resource" id="Resource_4et1r"]
script = ExtResource("3_lb0fv")
quest_signal = 3
associated_song_name = &"cosmic_cookies"
amount = 1
metadata/_custom_type_script = "uid://scy0e6iognox"

[sub_resource type="Resource" id="Resource_itu6j"]
script = ExtResource("2_wtq8e")
description = "Produce radio song \"Cosmic Cookies\""
requirements_array = Array[ExtResource("3_lb0fv")]([SubResource("Resource_4et1r")])
metadata/_custom_type_script = "uid://dd674gtune7s5"

[sub_resource type="Resource" id="Resource_hmqr2"]
script = ExtResource("3_lb0fv")
quest_signal = 3
associated_song_name = &"balance"
amount = 1
metadata/_custom_type_script = "uid://scy0e6iognox"

[sub_resource type="Resource" id="Resource_npspd"]
script = ExtResource("2_wtq8e")
description = "Produce radio song \"Balance\""
requirements_array = Array[ExtResource("3_lb0fv")]([SubResource("Resource_hmqr2")])
metadata/_custom_type_script = "uid://dd674gtune7s5"

[node name="QuestChecklist" type="CanvasLayer"]
script = ExtResource("1_ss3m1")
quest_resources = Array[ExtResource("2_wtq8e")]([SubResource("Resource_lb0fv"), SubResource("Resource_7qd3y"), SubResource("Resource_itu6j"), SubResource("Resource_npspd")])
quest_info_scene = ExtResource("5_knh3f")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -104.0
offset_bottom = 46.0
grow_horizontal = 0
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="ShowTutorialButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"TutorialButton"
text = "Tutorial"
script = ExtResource("5_xi4mx")
new_background_color = Color(0.19215687, 0.16470589, 0.28235295, 1)
new_font_color = Color(0.94509804, 0.91764706, 0.8392157, 1)

[node name="TutorialPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
theme_type_variation = &"HudPanelAlt"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TutorialPanel"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="QuestInfoContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TutorialPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
